Added "/api/v2/projects/top" endpoint to provide a leaderboard like API that lists projects from the top down.
